--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
--
-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <https://www.gnu.org/licenses/>.

-- https://docs.oracle.com/en/database/oracle/oracle-database/23/sqlrf/CREATE-TABLE.html
-- https://docs.oracle.com/en/database/oracle/oracle-database/23/sqlrf/Data-Types.html
CREATE TABLE IF NOT EXISTS film (
                  -- impliziter Index als B-Baum
                  -- 10 Stellen, davon 0 Nachkommastellen
    id            NUMBER(10,0) GENERATED BY DEFAULT ON NULL AS IDENTITY(START WITH 1000) PRIMARY KEY,
    version       NUMBER(3,0) NOT NULL,
    bewertung        NUMBER(1,0) NOT NULL CONSTRAINT film_bewertung CHECK (bewertung >= 0 AND bewertung <= 5),
    genre           VARCHAR2(12) CONSTRAINT film_genre CHECK (genre in ('DRUCKAUSGABE', 'KINDLE')),
    preis         NUMBER(8,2) NOT NULL,
    datum         DATE,
    erzeugt       TIMESTAMP,
    aktualisiert  TIMESTAMP
);

-- https://docs.oracle.com/en/database/oracle/oracle-database/23/sqlrf/CREATE-INDEX.html

CREATE TABLE IF NOT EXISTS titel (
    id          NUMBER(10,0) GENERATED BY DEFAULT ON NULL AS IDENTITY(START WITH 1000) PRIMARY KEY,
    titel       VARCHAR2(40) NOT NULL,
    beschreibung  VARCHAR2(40),
    film_id     NUMBER(10,0) NOT NULL REFERENCES film
);

CREATE UNIQUE INDEX IF NOT EXISTS titel_film_id_idx ON titel(film_id);
CREATE INDEX IF NOT EXISTS titel_titel_idx ON titel(titel);

CREATE TABLE IF NOT EXISTS filmplakat (
    id           NUMBER(10,0) GENERATED BY DEFAULT ON NULL AS IDENTITY(START WITH 1000) PRIMARY KEY,
    beschriftung VARCHAR2(32) NOT NULL,
    content_type VARCHAR2(16) NOT NULL,
    film_id      NUMBER(10,0) NOT NULL REFERENCES film
);

CREATE INDEX IF NOT EXISTS filmplakat_film_id_idx ON filmplakat(film_id);
